platform/networking/istio/base/virtual-services/frontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - "*"
  gateways:
    - rental-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rentalapp-frontend
            port:
              number: 3000
          weight: 100
      timeout: 30s
