platform/networking/istio/base/virtual-services/ledger-service-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ledger-service-vs
spec:
  hosts:
    - ledger-service
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: ledger-service
            subset: v1
            port:
              number: 8002
          weight: 100
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,retriable-4xx
